--- a/index - 副本.html
+++ b/index - 副本.html
@@ -27,16 +27,13 @@
 	font-size: x-large;
 	font-weight: bold;
 }
-.STYLE6 {color: #0000FF; font-weight: bold; font-size: 16px; }
-.STYLE7 {font-size: 16px}
 -->
 </style>
 </head>
 <body>
 <h1 align="center" class="STYLE5">兜七管家</h1>
 <p align="center" class="description">来建个网络房子，住进网络中的家，请牢记本站网址:<span class="STYLE1">www.dou7.com </span></p>
-<div align="center">关注微信公众号：<span class="STYLE2">dou7com</span>，并添加微信号：<span class="STYLE3">dou7_com</span>为好友，文档人工免费无限存储服务，将资料存进网络，建成网络里的家！</div>
-<div align="center"><a href="https://www.dou7.com" target="_blank" class="STYLE6">私人区</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dou7.com/share/" target="_blank" class="STYLE6">分享共享区</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dou7.com/shop/online/" target="_blank" class="STYLE6">网上购物区</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dou7.com/shop/store/" target="_blank" class="STYLE6">实体购物区</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://mp.weixin.qq.com/s?__biz=MzU0MDE4MjQxMw==&mid=100000058&idx=1&sn=f7836744bb5c45c1a08219e5671ddc11&chksm=7b3c53d84c4bdace09c2d3b5931786534c4ad77a3f6cb40b94c412bc38da6e031b7bc703ab72#rd" target="_blank" class="STYLE4 STYLE7">使用说明</a></div>
+<div align="center">关注微信公众号：<span class="STYLE2">dou7com</span>，并添加微信号：<span class="STYLE3">dou7_com</span>为好友，文档人工免费无限存储服务，将资料存进网络，建成网络里的家！（<a href="http://mp.weixin.qq.com/s?__biz=MzU0MDE4MjQxMw==&mid=100000058&idx=1&sn=f7836744bb5c45c1a08219e5671ddc11&chksm=7b3c53d84c4bdace09c2d3b5931786534c4ad77a3f6cb40b94c412bc38da6e031b7bc703ab72#rd" target="_blank" class="STYLE4">使用说明</a>）</div>
 <div id="wrapper"> 
   <!-- 品牌列表开始 -->
   <div class="brand-list">
@@ -136,7 +133,7 @@
 	  <div class="item" id="brand-J">
         <h3>J号楼</h3>
         <p><a href="https://www.dou7.com/jin/" target="_blank">金</a></p>
-        <p><a href="https://ju3ge4li4zi3.godaddysites.com/" target="_blank">举个栗子</a></p>
+        <p><a href="#" target="_blank">BOCOTON/海诺丝丽</a></p>
         <p><a href="#" target="_blank">CO.E/韩伊</a></p>
         <p><a href="#" target="_blank">CO.E/韩伊</a></p>
         <p><a href="#" target="_blank">CO.E/韩伊</a></p>
