--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
+<metahttp-equiv="refresh"content="5;url=https://www.dou7.com">
 <title>兜七管家</title>
 
 <link href="css/css.css" type="text/css" rel="stylesheet"/>
